--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
+    font-family: 'Lobster', cursive;
     font-family: 'Poppins', sans-serif;
+    
     margin: 0;
-    font-size: 16px;
     color: #707070;
 }
 
@@ -19,7 +20,8 @@ h2 {
 }
 
 h3 {
-    font-weight: 400;
+    font-family: 'Lobster';
+    font-weight: 300;
     font-size: 36px;
     color: #0692c4;
 }
@@ -32,10 +34,12 @@ h4 {
 h5 {
     font-weight: 600;
     font-size: 24px;
+    margin: 15px 0;
+    color: #121212;
 }
 
-p {
-    font-size: 16px;
+p{
+    font-size: 18px;
 }
 .btn {
     padding: 16px 12px;
@@ -65,10 +69,10 @@ p {
 /* ========== banner section end ============= */
 
 /* ========== donate-today start ============= */
-.donate-today {
+.donate {
     margin: 100px auto;
-    height: 100vh;
     text-align: center;
+    overflow: hidden;
 }
 
 .donate-amount {
@@ -94,6 +98,7 @@ p {
   width: 53%;
   margin: 25px auto;
   border: 0;
+  padding-bottom: 15px;
   border-bottom: 1px solid rgb(186, 183, 183);
 }
 ::placeholder {
@@ -102,3 +107,48 @@ p {
     font-size: 18px;
     line-height: 2;
   }
+/* ========== donate-today start ============= */
+
+.plans{
+    margin: 3% 10%;
+    display: flex;
+justify-content: space-around;
+
+}  
+.plans div{
+    width: 32%;
+    height: auto;
+    padding: 40px 20px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 0;
+    text-align: left;
+}
+.plans p{
+    font-size: 16px;
+}
+.plan-icons{
+    height: 70px;
+}
+#plan-one{
+   background-color: rgba(250, 134, 210, 0.2);
+}
+#plan-two{
+background-color: rgba(71, 244, 71, 0.2);
+}
+#plan-three{
+background-color: rgba(250, 226, 6, 0.2);
+}
+.footer{
+    margin: 0;
+    bottom: 0;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
+    color: #fff;
+    background: #0B0D17;
+    text-align: center;
+}
+.footer p{
+    font-size: 14px;
+}
