--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ section {
 }
 
 button {
+    margin-top: 15px;
     padding: 16px 12px;
     width: 160px;
     height: 56px;
@@ -117,7 +118,7 @@ button {
 /* ========== donate-plans start ============= */
 
 .plans {
-    margin: 3% 10%;
+    margin: 3% 10% 0;
     display: flex;
     justify-content: space-around;
 
@@ -155,13 +156,51 @@ button {
 
 /* ========== donate-plans end ============= */
 
+/* ========== volunteeer form start ============= */
+
+#volunteers{
+    margin-top: 50px;
+    height: 90vh;
+    background :url("./images/donation10.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+}
+.volunteer-form{
+    margin: auto;
+    box-sizing: border-box;
+    height: 70vh;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    background-color: #5d4e4e89;
+    color: #fff;
+border-radius: 10px;
+}
+.volunteer-form input{
+    width: 60%;
+    margin: 5px auto;
+    padding: 15px 0;
+    border: 0;
+    background: none;
+    border-bottom: 3px solid rgb(255, 255, 255);
+}
+.volunteer-form input::placeholder {
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 300;
+}
+
 /* ========== subscsription start ============= */
 
 .subscrib {
     width: 800px;
     height: 180px;
     margin: 50px auto;
-    background: #FFF4D6;
+    background: #fff0c7;
     display: flex;
     justify-content: center;
     align-items: center;
